fix text alignment

--- a/public/assets/css/lockdown.css
+++ b/public/assets/css/lockdown.css
@@ -2762,7 +2762,7 @@ ul {
 }
 
 .services-row .services-one__text {
-  text-align: justify;
+  text-align: left;
   text-align-last: start; /* Aligns the last line to the left */
   padding: 0 10px;
   line-height: 1.6;
@@ -4042,7 +4042,7 @@ ul {
   border-radius: 5px;
   padding: 40px 40px 40px;
   z-index: 1;
-text-align: justify; 
+text-align: left; 
 }
 
 .testimonial-one__shape-1 {
@@ -4104,7 +4104,7 @@ text-align: justify;
   font-size: 16px;
   line-height: 1.6;
   color: #555;
-  text-align: justify; /* Makes all lines start and end at the same point */
+  text-align: left; /* Makes all lines start and end at the same point */
   word-wrap: break-word; /* Prevents text overflow for long words */
   margin: 0; /* Remove default margins */
 }
@@ -4496,7 +4496,7 @@ text-align: justify;
   color: rgba(var(--lockdown-white-rgb), .7);
   margin-bottom: 29px;
   margin-top: 40px;
-  text-align: justify;
+  text-align: left;
   hyphens: auto;
 }
 
